remixshare/flg-five.css
/* Freedoms License Generator - 1 */

#flg-container {
	text-align: center;
	margin: 0 auto;
	width: 740px;
	position: relative;
	top: 0; left: 0;
    /* border: 1px solid black; */
}

h4.freedoms {
	margin: 5px;
	color: #6C9D31;
}
h4.conditions {
	margin: 5px;
	color: #C0272D;
}

#flg-ui {
	position: relative;
	top: 0; left: 0;
	width: 605px;
	padding: 20px;
	margin: 0 auto;
	
	border-top: 2px solid #CADB2A;
	border-bottom: 2px solid #F26522;
}

#flg-ui img {
	border: none;
}

#flg-ui a:link {
	text-decoration: none;
}

#flg-freedoms {
	clear: both;
}

#flg-freedoms #flg-f-share {
	float: left;
}

#flg-freedoms #flg-f-remix {
	float: right;
}

#flg-left {
	clear: both;
	width: 366px;
	float: left;
	margin:  15px 0;
}
#flg-mid {
	position: absolute;
	top: 275px;
	left: 295px;
	background: url(../images/fuzzy.png);
	font-size:  80%;
	border:  2px dashed #777;
}
#flg-right {
	width: 366px;
	margin:  15px 0;
	float:  left;
	margin-left: -147px;
	margin-top:  85px;
}

#flg-connect-share {
	float: left;
	margin-left:  22px;
}

#flg-connect-remix {
	float: right;
	margin-top:  -69px;
	margin-right:  -1px;
}

#flg-connect-nc {
	clear: both;
	margin-top: -94px;
	margin-left:  22px;
	float: left;
}

#flg-connect-sa {
	clear: both;
	margin-top: -95px;
	margin-right: 0px;
	float: right;
}

#flg-connect-share.flg-pipe-off {
	background: url(5/share-dim.png) no-repeat top left;
}
#flg-connect-remix.flg-pipe-off {
	background: url(5/remix-dim.png) no-repeat top left;
}

#flg-connect-nc.flg-pipe-off {
	background: url(5/nc-off.png) no-repeat top left;
}
#flg-connect-sa.flg-pipe-off {
	background: url(5/sa-off.png) no-repeat top left;
}

#flg-connect-share.flg-pipe-middle {
	background: url(5/share-dim.png) no-repeat top left;
}
#flg-connect-remix.flg-pipe-middle {
	background: url(5/remix-dim.png) no-repeat top left;
}

#flg-connect-nc.flg-pipe-middle {
	background: url(5/nc-dim.png) no-repeat top left;
}
#flg-connect-sa.flg-pipe-middle {
	background: url(5/sa-dim.png) no-repeat top left;
}

#flg-connect-share.flg-pipe-on {
	background: url(5/share-on.png) no-repeat top left;
}
#flg-connect-remix.flg-pipe-on {
	background: url(5/remix-on.png) no-repeat top left;
}


#flg-connect-nc.flg-pipe-on {
	background: url(5/nc-on.png) no-repeat top left;
}
#flg-connect-sa.flg-pipe-on {
  background: url(5/sa-on.png) no-repeat top left;
}



#flg-connect-share {
		width:  376px;
		height:  282px;
}

#flg-connect-remix {
		height:  376px;
		width: 282px;
		margin-left: 0px;
}
#flg-connect-nc {
	height:  376px;
	width:  282px;
}
#flg-connect-sa {
	width:  376px;
	height:  282px;
	border-width: 4px;
	
}

#flg-connect-share a:link, 
#flg-connect-remix a:link, 
#flg-connect-nc a:link, 
#flg-connect-sa a:link,
#flg-connect-share a:visited, 
#flg-connect-remix a:visited,
#flg-connect-nc a:visited,
#flg-connect-sa a:visited {
	display:  block;
	width:  100%;
	height:  100%;
}

#flg-conditions {
	clear: both;
}

#flg-conditions #flg-c-nc {
	float: left;
}

#flg-conditions #flg-c-sa {
	float: right;
}

#flg-result {
	width: 108px;
	height: 80px;
	padding: 20px;
/*	border: 1px solid #aaa;*/
}

